Revised PHP Functions assignment

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
     <div class="row medium-8 large-7 columns">
         <div class="blog-post">
             <h3><a href="#">Create WDV341 Homework Page</a> <small>5 Points</small></h3>
+            <h3><a href="gitTerminology.html">Git Terminology</a> <small>10 Points</small></h3>
             <h3><a href="phpbasics.php">PHP Basics</a> <small>5 Points</small></h3>
+            <h3><a href="phpFunctionsInput.php">PHP Functions</a> <small>5 Points</small></h3>
+            <!--
             <h3><a href="formHandlerInput.php">PHP Form Handler</a> <small>10 Points</small></h3>
             <h3><a href="formEmailerInput.php">PHP Form Emailer</a> <small>10 Points</small></h3>
-            <h3><a href="gitTerminology.html">Git Terminology</a> <small>10 Points</small></h3>
-            <h3><a href="phpFunctionsInput.php">PHP Functions</a> <small>5 Points</small></h3>
             <h3><a href="contactForm.html">Contact Form with Email</a> <small>50 Points</small></h3>
             <h3><a href="processEmail.php">Email Class</a> <small>25 Points</small></h3>
             <h3><a href="formValidation.php">Form Validation</a> <small>5 Points</small></h3>
@@ -57,6 +58,9 @@
             <h3><a href="contactForm.php">Contact Form Adding to Database</a> <small>50 Points</small></h3>
             <h2>Events Management</h2>
             <h3><a href="eventSelect.php">View Events</a></h3>
+            -->
+            <h2>View Repository on GitHub</h2>
+            <h3><a href="https://github.com/nbrockhoff/wdv341hw">View Repo</a></h3>
             <h2>Final Project</h2>
             <h3><a href="../../PhotoRig/">PhotoRig</a></h3>
 
