added database class assignment.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
             color: #728f59;
             font-weight: bold;
         }
+        
+        h3 a {
+            color: slateblue;
+        }
+        
+        h4 a {
+            color: rgb(149, 145, 174);
+        }
     </style>
 </head>
 
@@ -46,7 +54,7 @@
             <h3><a href="gitTerminology.html">Git Terminology</a> <small>10 Points</small></h3>
             <h3><a href="phpbasics.php">PHP Basics</a> <small>5 Points</small></h3>
             <h3><a href="phpFunctionsInput.php">PHP Functions</a> <small>5 Points</small></h3>
-            <!--
+
             <h3><a href="formHandlerInput.php">PHP Form Handler</a> <small>10 Points</small></h3>
             <h3><a href="formEmailerInput.php">PHP Form Emailer</a> <small>10 Points</small></h3>
             <h3><a href="contactForm.html">Contact Form with Email</a> <small>50 Points</small></h3>
@@ -58,9 +66,10 @@
             <h3><a href="contactForm.php">Contact Form Adding to Database</a> <small>50 Points</small></h3>
             <h2>Events Management</h2>
             <h3><a href="eventSelect.php">View Events</a></h3>
-            -->
-            <h2>View Repository on GitHub</h2>
-            <h3><a href="https://github.com/nbrockhoff/wdv341hw">View Repo</a></h3>
+
+            <h4><a href="https://github.com/nbrockhoff/wdv341hw">View Homework Repository on GitHub</a></h4>
+        </div>
+        <div>
             <h2>Final Project</h2>
             <h3><a href="../../PhotoRig/">PhotoRig</a></h3>
 
