added database class assignment.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             <h3><a href="testConnection.php">Create a Connection File</a> <small>5 Points</small></h3>
             <h3><a href="eventsForm.php">Create a Form Page for the Events</a> <small>10 Points</small></h3>
             <h3><a href="contactForm.php">Contact Form Adding to Database</a> <small>50 Points</small></h3>
+
+            <h3><a href="Database.php">Database Class</a> <small>20 Points</small></h3>
             <h2>Events Management</h2>
             <h3><a href="eventSelect.php">View Events</a></h3>
 
